# prrt_plugin

./: .gitignore  .gitmodules  README.md  install.sh  meson.build
apps/: gst_receiver_udp_prrt_h264.c  gst_sender_udp_prrt_h264.c
plugin/: .gitignore  AUTHORS  COPYING  Makefile.am  autogen.sh  configure.ac
plugin/src/: Makefile.am  gstprrtsink.c  gstprrtsink.h  gstprrtsrc.c  gstprrtsrc.h  meson.build
scripts/: receiver.sh  sender.sh
